fix: permission api, minor changes